--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,5 +4,13 @@
         <% if !!@cart %>
           <li> <%= link_to "Cart", cart_path(current_cart) %></li>
         <% end %>
+        
+        <% if current_user %>
+          <li> <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+          <li> <%= link_to "Sign Up", new_user_registration_path %></li>
+          <li> <%= link_to "sign in", new_user_session_path %></li>
+        <% end %>
+        
     </ul>
 </nav>
