--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,10 @@
         <% end %>
         
         <% if current_user %>
-          <li> <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+          <li> <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></li>
+          <li>Signed in as <%= current_user.email %></li>
         <% else %>
-          <li> <%= link_to "Sign Up", new_user_registration_path %></li>
+          <li> <%= link_to "Sign up", new_user_registration_path %></li>
           <li> <%= link_to "sign in", new_user_session_path %></li>
         <% end %>
         
